WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172227
REGRESSION (
r215480
): PKPaymentAuthorizationStatusFailure sent to PassKit in completeShippingContactSelection() even when there are no errors
https://bugs.webkit.org/show_bug.cgi?id=172227
Summary
REGRESSION (r215480): PKPaymentAuthorizationStatusFailure sent to PassKit in ...
Andy Estes
Reported
2017-05-17 09:46:01 PDT
REGRESSION (
r215480
): PKPaymentAuthorizationStatusFailure sent to PassKit in completeShippingContactSelection() even when there are no errors
Attachments
Patch
(1.91 KB, patch)
2017-05-17 09:51 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(1.86 KB, patch)
2017-05-17 10:13 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2017-05-17 09:47:55 PDT
rdar://problem/31978432
Andy Estes
Comment 2
2017-05-17 09:51:04 PDT
Created
attachment 310403
[details]
Patch
Andy Estes
Comment 3
2017-05-17 10:13:18 PDT
Created
attachment 310407
[details]
Patch
Alexey Proskuryakov
Comment 4
2017-05-17 10:44:23 PDT
Comment on
attachment 310407
[details]
Patch Can this be tested?
Andy Estes
Comment 5
2017-05-17 10:45:18 PDT
(In reply to Alexey Proskuryakov from
comment #4
)
> Comment on
attachment 310407
[details]
> Patch > > Can this be tested?
Not right now, sadly.
WebKit Commit Bot
Comment 6
2017-05-17 11:17:29 PDT
Comment on
attachment 310407
[details]
Patch Clearing flags on attachment: 310407 Committed
r216982
: <
http://trac.webkit.org/changeset/216982
>
WebKit Commit Bot
Comment 7
2017-05-17 11:17:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug