REGRESSION (r215480): PKPaymentAuthorizationStatusFailure sent to PassKit in completeShippingContactSelection() even when there are no errors https://bugs.webkit.org/show_bug.cgi?id=172227 <rdar://problem/31978432>

Reviewed by Alexey Proskuryakov.

* UIProcess/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
(WebKit::toPKPaymentAuthorizationStatus): If there is an update with no errors, we should
return PKPaymentAuthorizationStatusSuccess instead of PKPaymentAuthorizationStatusFailure.


Canonical link: https://commits.webkit.org/189147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216982 268f45cc-cd09-0410-ab3c-d52691b4dbfc